--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
                 <a class="nav-link" href="./pages/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="./pages/service.html">Services</a>
               </li>
             </ul>
 
-            <button class="btn fs-reg primary-color">Contact Us</button>
+            <button class="btn fs-reg primary-color">
+              <a href="./pages/contact.html">Contact Us</a>
+            </button>
           </div>
         </div>
       </nav>
@@ -352,8 +354,12 @@
           </div>
           <div class="col-lg-1 col-md-3 col-6 offset-lg-2 order-1 order-md-2">
             <ul class="ls-none">
-              <li class="p-bottom"><a class="white-clr" href="#">Home</a></li>
-              <li class="p-bottom"><a class="white-clr" href="#">About</a></li>
+              <li class="p-bottom">
+                <a class="white-clr" href="./index.html">Home</a>
+              </li>
+              <li class="p-bottom">
+                <a class="white-clr" href="./pages/about.html">About</a>
+              </li>
               <li class="p-bottom">
                 <a class="white-clr" href="#">Sign Up</a>
               </li>
@@ -362,7 +368,7 @@
           <div class="col-lg-2 col-md-3 col-6 offset-lg-1 order-2 order-md-3">
             <ul class="ls-none">
               <li class="p-bottom">
-                <a class="white-clr" href="#">Services</a>
+                <a class="white-clr" href="./pages/service.html">Services</a>
               </li>
               <li class="p-bottom">
                 <a class="white-clr" href="#">Contact</a>
