--- a/pages/service.html
+++ b/pages/service.html
@@ -26,7 +26,7 @@
     <!-- utility css -->
     <link rel="stylesheet" href="../styles/utility.css" />
     <!-- main css -->
-    <link rel="stylesheet" href="../styles/about.css" />
+    <link rel="stylesheet" href="../styles/service.css" />
   </head>
   <body>
     <!-- header-area starts -->
@@ -54,15 +54,15 @@
                 <a class="nav-link" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="./about.html">About</a>
+              </li>
+              <li class="nav-item">
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="./about.html"
-                  >About</a
+                  href="./service.html"
+                  >Services</a
                 >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./service.html">Services</a>
               </li>
             </ul>
 
@@ -82,31 +82,23 @@
       <div class="container wide-90 py">
         <div class="row align-items-center">
           <div class="col-lg-6">
-            <h1 class="fs-xl">Jean Joe - FOUNDER</h1>
+            <h1 class="fs-xl">We Provide Virtual Coaching services</h1>
             <p class="fs-reg">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
               consectetur justo quis euismod vehicula. Quisque diam dui,
-              imperdiet et hendrerit in, accumsan tempus erat.
-            </p>
-            <p class="fs-reg">
-              Nullam ornare blandit urna, eu pulvinar elit faucibus eget. Sed
-              justo mauris, ultricies eu urna at, gravida commodo mauris.
-              Quisque ac felis ac sapien dictum gravida aliquet ac purus. Donec
-              sit amet ex vel ex sollicitudin posuere at et metus. Duis sodales
-              ligula nisi, molestie lacinia ex rhoncus vel.
-            </p>
-            <p class="fs-reg">
-              Nullam ornare blandit urna, eu pulvinar elit faucibus eget. Sed
-              justo mauris, ultricies eu urna at, gravida commodo mauris.
-              Quisque ac felis ac sapien dictum gravida aliquet ac purus. Donec
-              sit amet ex vel ex sollicitudin posuere at et metus. Duis sodales
-              ligula nisi, molestie lacinia ex rhoncus vel.
+              imperdiet et hendrerit in, accumsan tempus erat. Nullam ornare
+              blandit urna, eu pulvinar elit faucibus eget. Sed justo mauris,
+              ultricies eu urna at, gravida commodo mauris. Quisque ac felis ac
+              sapien dictum gravida aliquet ac purus. Donec sit amet ex vel ex
+              sollicitudin posuere at et metus. Duis sodales ligula nisi,
+              molestie lacinia ex rhoncus vel. In venenatis nisi orci, non
+              accumsan nisl tempus ut.
             </p>
           </div>
           <div class="col-lg-6 hero-banner">
             <div class="float-end relative">
               <img class="bg-img" src="../images/background-img.png" alt="" />
-              <img class="hero-img" src="../images/service.png" alt="" />
+              <img class="hero-img" src="../images/service-top.png" alt="" />
             </div>
           </div>
         </div>
@@ -115,9 +107,45 @@
 
     <!-- hero area ends -->
 
-    <!-- feedback area starts -->
+    <!-- service area starts -->
+
+    <div class="container-fluid px-0 secondary-bg">
+      <div class="container wide-90 py">
+        <div class="row align-items-center">
+          <div class="col-lg-6 relative service-banner">
+            <!-- <img
+              class="bg-img bg-down"
+              src="../images/background-img.png"
+              alt=""
+            /> -->
+            <img
+              class="hero-img"
+              src="../images/service-bottom.png"
+              alt="sevice image"
+            />
+          </div>
+          <div class="col-lg-6">
+            <h2 class="fs-md bold">We Provide Post & Pre Marital Coaching</h2>
+            <p class="fs-reg">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+              consectetur justo quis euismod vehicula. Quisque diam dui,
+              imperdiet et hendrerit in, accumsan tempus erat. Nullam ornare
+              blandit urna, eu pulvinar elit faucibus eget. Sed justo mauris,
+              ultricies eu urna at, gravida commodo mauris. Quisque ac felis ac
+              sapien dictum gravida aliquet ac purus. Donec sit amet ex vel ex
+              sollicitudin posuere at et metus. Duis sodales ligula nisi,
+              molestie lacinia ex rhoncus vel. In venenatis nisi orci, non
+              accumsan nisl tempus ut.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- service area ends -->
+
+    <!-- appointment starts -->
     <div
-      class="container-fluid px-0 secondary-bg high-50 d-flex align-items-center"
+      class="container-fluid px-0 white-bg high-50 d-flex align-items-center"
     >
       <div class="container wide-90">
         <div class="row align-items-center justify-content-center">
@@ -133,6 +161,95 @@
             <button class="btn btn-main primary-bg white-clr fs-mreg">
               Make an Appointment
             </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- appointment ends -->
+
+    <!-- feedback area starts -->
+    <div
+      class="container-fluid px-0 secondary-bg high-90 d-flex align-items-center relative"
+    >
+      <img
+        src="../images/Group113.png"
+        alt=""
+        class="feedback-bg-top absolute"
+      />
+      <img
+        src="../images/Group113.png"
+        alt=""
+        class="feedback-bg-bottom absolute"
+      />
+      <div class="container wide-90">
+        <div class="row justify-content-center align-content-center py">
+          <div class="col-lg-5 col-md-8 col-12 white">
+            <h1 class="fs-xl bold text-center">
+              What our customers say about us
+            </h1>
+          </div>
+        </div>
+        <div class="row justify-content-center align-content-center py">
+          <div class="col-lg-3 col-md-8 col-12 white-bg shadow round-1 py">
+            <div class="feedback__title py">
+              <div class="upper-row p-bottom">
+                <img src="../images/Ellipse12.png" alt="" />
+                <div>
+                  <p class="fs-sm bold">
+                    ChiChi<br />
+                    South Africa
+                  </p>
+                </div>
+                <img class="quoation-img" src="../images/quations.png" alt="" />
+              </div>
+              <p class="fs-reg light">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+                consectetur justo quis euismod vehicula. Quisque diam dui,
+                imperdiet et
+              </p>
+            </div>
+          </div>
+          <div
+            class="col-lg-3 col-md-8 col-12 offset-lg-1 white-bg shadow round-1 py"
+          >
+            <div class="feedback__title py">
+              <div class="upper-row p-bottom">
+                <img src="../images/Ellipse13.png" alt="" />
+                <div>
+                  <p class="fs-sm bold">
+                    Queen Rita <br />
+                    USA
+                  </p>
+                </div>
+                <img class="quoation-img" src="../images/quations.png" alt="" />
+              </div>
+              <p class="fs-reg light">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+                consectetur justo quis euismod vehicula. Quisque diam dui,
+                imperdiet et
+              </p>
+            </div>
+          </div>
+          <div
+            class="col-lg-3 col-md-8 col-12 offset-lg-1 white-bg shadow round-1 py"
+          >
+            <div class="feedback__title py">
+              <div class="upper-row p-bottom">
+                <img src="../images/Ellipse14.png" alt="" />
+                <div>
+                  <p class="fs-sm bold">
+                    Gloria Uko<br />
+                    Nigeria
+                  </p>
+                </div>
+                <img class="quoation-img" src="../images/quations.png" alt="" />
+              </div>
+              <p class="fs-reg light">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+                consectetur justo quis euismod vehicula. Quisque diam dui,
+                imperdiet et
+              </p>
+            </div>
           </div>
         </div>
       </div>
