--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
               consectetur justo quis euismod vehicula. Quisque diam dui,
               imperdiet et hendrerit in, accumsan tempus erat.
             </p>
-            <button class="btn primary-bg white-clr">Book Now</button>
+            <button class="btn primary-bg white-clr">
+              <a class="white-clr" href="./pages/success.html">Book Now</a>
+            </button>
           </div>
           <div class="col-lg-6 hero-banner">
             <div class="float-end relative">
@@ -141,7 +143,9 @@
                 Coaching
               </li>
             </ul>
-            <button class="btn primary-color">Book Now</button>
+            <button class="btn">
+              <a class="primary-color" href="./pages/success.html">Book Now</a>
+            </button>
           </div>
         </div>
       </div>
