--- a/pages/service.html
+++ b/pages/service.html
@@ -159,7 +159,7 @@
         <div class="row align-items-center justify-content-center p-top">
           <div class="col-lg-6 cl-sm-8 col-10 text-center">
             <button class="btn btn-main primary-bg white-clr fs-mreg">
-              Make an Appointment
+              <a class="white-clr" href="./success.html">Make an Appointment</a>
             </button>
           </div>
         </div>
