--- a/pages/success.html
+++ b/pages/success.html
@@ -26,10 +26,40 @@
     <!-- utility css -->
     <link rel="stylesheet" href="../styles/utility.css" />
     <!-- main css -->
-    <link rel="stylesheet" href="../styles/success.css" />
   </head>
   <body>
-    <main class="container-fluid px-0 d-flex align-items-center"></main>
+    <main
+      class="container-fluid px-0 d-flex align-items-center high-100 secondary-bg"
+    >
+      <div class="container wide-90">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <div class="text-center p-bottom">
+              <img src="../images/fetti.png" alt="" />
+              <h1 class="fs-xl inline p-left p-right">CONGRATULATIONS !!!</h1>
+              <img src="../images/fetti.png" alt="" />
+            </div>
+            <p class="p-top fs-mreg p-bottom">
+              You have successfully registered for the webinar “How to
+              understand your spouse better towards a blissful union” by Jo-Jean
+              Imoh-Ita
+            </p>
+            <p class="fs-mreg p-bottom bold">
+              You will receive and email within 24 hours with the link to access
+              the webinar.
+            </p>
+            <p class="fs-mreg p-bottom">
+              The webinar is hosted on the ZOOM platform. Looking forward to
+              having you.
+            </p>
+            <p class="fs-mreg p-bottom">Thank you!</p>
+            <button class="btn primary-bg">
+              <a class="white-clr" href="../index.html">Go Back Home</a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <!-- bootstra script -->
     <script
